--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/server.js",
+    "start-prod": "NODE_ENV=production node ./src/server.js",
+    "start-dev": "nodemon ./src/server.js",
     "lint": "eslint ./src"
   },
   "keywords": [],
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
-    "nanoid": "^3.3.4"
+    "nanoid": "^3.3.4",
+    "nvm": "^0.0.4"
   }
 }
